--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Update Filter Lists
 
 on:
   schedule:
-    - cron: "0 21 * * *"
+    - cron: "0 21 * * 5"
   push:
     branches:
       - main
